--- a/autopecas/Gemfile
+++ b/autopecas/Gemfile
@@ -15,6 +15,8 @@ gem 'coffee-rails', '~> 4.0.0'
 
 #gem 'therubyracer',  platforms: :ruby
 
+gem 'maskmoney-rails'
+
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~>3.0'
